[package]
name = "ktbs-bitrise-cli"
version = "0.1.0"
authors = ["hadi <mhadifaturrahman@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
rpassword = "5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
base64 = "0.13"
magic-crypt = "3.1.5"
regex = "1"
dotenv = "0.15"
dotenv_codegen = "0.15"
